# simple-rl-llms

./: CLAUDE.md  LICENSE  Notes.md  README.md  pyproject.toml
scripts/: train_grpo.py
